--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="icon" href="https://ik.imagekit.io/sfknwtw4r/Portofolio/logoapp.png">
       <title>Portfolio Website Design</title>
     </head>
 
